@@ -3,6 +3,7 @@ AUX libsnes-0.075-makefile.patch 574 RMD160 0fc27ac14c478a7b16ec9e48662095eba466
 DIST bsnes_v073.tar.bz2 874627 RMD160 1f93da56929fcb70cf94f1dfd470e2b321da4f86 SHA1 eb49a8fbec684eedf32a340a712b578824e60587 SHA256 6a5c2706ef1d12d97705bbfad7e3a27b5ac04ef8a6c78548b327ea3a91850056
 DIST bsnes_v075-source.tar.bz2 588228 RMD160 23d2379291831d247d0247077f0b24fb55805882 SHA1 cb9ac27c5c7d1db2f2a7014eb69c402c4287ca1a SHA256 4ce3f4591865d2e460749119744fff70836c927b18202e50d4d3855dd6f3c05c
 EBUILD libsnes-0.073.ebuild 1213 RMD160 f279203445d11f118a3c1a4f583c1e9cff6f2147 SHA1 d01ef54c59c442d95620b3eaf9f6c60dba6d36b2 SHA256 98e8ac43df63637133ccec1fc35c4b62d7f55a9e890e474a983e07e8073f14e1
+EBUILD libsnes-0.075-r1.ebuild 1148 RMD160 b94d95d6c0fb25f6a375a5fa27aec035e07cc483 SHA1 02f5c4216a7ef6289933eeeca65035869e4251c9 SHA256 da7e56faeb628ce1bd2db548dfbd630b83723dd50163bb96c7a08962632fb1f1
 EBUILD libsnes-0.075.ebuild 1198 RMD160 ca69afd938937ec94be3619462747b0c509bd723 SHA1 fcb1c80a64f74efbb30aa11f51c6271bc838d053 SHA256 db77bd10f819a27d446c520c5bfb0f133b410eab6b922f6096b95ad236a8af4c
-MISC ChangeLog 808 RMD160 426446232ef43160b406bd4545872b8f72be1b81 SHA1 5af98981aaf197e4a2ee1b0401b8df37d9ed3176 SHA256 e1e7301eaa345523d1b6e65a9d1e9367b9af39725822407ca3492a41483c402a
+MISC ChangeLog 958 RMD160 0b9aa4c12400f6ef00c3442fe4ccf9e8ad68b220 SHA1 6490040867e82e60b4a35939472ac062f107897a SHA256 57b1ab6e65cf302faa12ea600e682c02df1c4ce31b9f4138e68eda17f6d10861
 MISC metadata.xml 558 RMD160 6f1e7a73aaf4bf49cf8da5a3d4e7cf339a458a9a SHA1 85651595141c5b457cd3372cc6e04a373efdf714 SHA256 bae95d54025eef7674357173981d7bfc1450f4c89de5e848505eef45ccaf7c19
